// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert inserts multiple nodes 1`] = `
"a
├── b
│   ├── b1
│   ├── x
│   ├── y
│   ├── z
│   └── b2
└── c
    ├── c1
    └── c2"
`;

exports[`insert inserts nested node 1`] = `
"a
├── b
│   ├── b1
│   └── b2
└── c
    ├── c1
    ├── x
    └── c2"
`;

exports[`insert inserts node at end 1`] = `
"a
├── b
│   ├── b1
│   └── b2
├── c
│   ├── c1
│   └── c2
└── x"
`;

exports[`insert inserts node at start 1`] = `
"a
├── x
├── b
│   ├── b1
│   └── b2
└── c
    ├── c1
    └── c2"
`;

exports[`insert inserts node in middle 1`] = `
"a
├── b
│   ├── b1
│   └── b2
├── x
└── c
    ├── c1
    └── c2"
`;

exports[`move moves node from 0 to 1 1`] = `
"a
├── b
│   ├── b1
│   └── b2
└── c
    ├── c1
    └── c2"
`;

exports[`move moves node from 0.0 to 1 1`] = `
"a
├── b
│   └── b2
├── b1
└── c
    ├── c1
    └── c2"
`;

exports[`move moves node from 0.0 to 1.0 1`] = `
"a
├── b
│   └── b2
└── c
    ├── b1
    ├── c1
    └── c2"
`;

exports[`move moves node from 1 to 0 1`] = `
"a
├── c
│   ├── c1
│   └── c2
└── b
    ├── b1
    └── b2"
`;

exports[`move moves node using old index 1`] = `
"a
├── d
├── b
├── c
├── e
└── f"
`;

exports[`partially applied inserts node 1`] = `
"a
├── b
│   ├── b1
│   └── b2
├── x
└── c
    ├── c1
    └── c2"
`;

exports[`partially applied moves node 1`] = `
"a
├── c2
├── b
│   ├── b1
│   └── b2
└── c
    └── c1"
`;

exports[`partially applied removes node 1`] = `
"a
└── b
    ├── b1
    └── b2"
`;

exports[`remove removes multiple nodes 1`] = `
"a
└── b"
`;

exports[`remove removes multiple nodes with common ancestor 1`] = `
"a
└── c
    ├── c1
    └── c2"
`;

exports[`remove removes nested node 1`] = `
"a
├── b
│   ├── b1
│   └── b2
└── c
    └── c1"
`;

exports[`remove removes node at end 1`] = `
"a
└── b
    ├── b1
    └── b2"
`;

exports[`remove removes node at start 1`] = `
"a
└── c
    ├── c1
    └── c2"
`;
